--- a/finance-dashboard-backend/package.json
+++ b/finance-dashboard-backend/package.json
@@ -15,9 +15,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
+    "express-validator": "^7.2.1",
     "helmet": "^8.0.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "pg": "^8.14.0"
+    "nodemon": "^3.1.9",
+    "pg": "^8.14.0",
+    "prisma": "^6.5.0",
+    "redis": "^4.7.0"
   }
 }
